feat: First monolithic implementation of vault with openzepellin templates
- Initial implementation of external vaults for local and testnet deployments
- First iterations on ignition files
- Updated environment variables for base and base sepolia

--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "scripts": {
     "start": "npx hardhat node",
-    "deploy:riddle": "npx hardhat ignition deploy ./ignition/modules/RiddleQuest.ts --network sepolia --verify",
-    "copy:factory": "cp artifacts/contracts/RiddleQuestFactory.sol/RiddleQuestFactory.json ../frontend/src/config/abi/RiddleQuestFactory.json",
-    "copy:verifier": "cp artifacts/contracts/RiddleVerifier.sol/HonkVerifier.json ../frontend/src/config/abi/HonkVerifier.json",
-    "deploy": "npm run deploy:riddle && npm run copy:factory && npm run copy:verifier"
+    "deploy:local": "npx hardhat ignition deploy ./ignition/modules/Vault.ts --network localhost --verify",
+    "deploy:sepolia": "npx hardhat ignition deploy ./ignition/modules/Vault.ts --network baseSepolia --verify",
+    "deploy:mainnet": "npx hardhat ignition deploy ./ignition/modules/Vault.ts --network sepolia --verify"
   },
   "devDependencies": {
     "@types/node": "^22.15.2",
