feat: Add scripts to set and get accounts

--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "start": "npx hardhat node",
     "deploy:local": "npx hardhat ignition deploy ./ignition/modules/Vault.ts --network localhost --verify",
     "deploy:sepolia": "npx hardhat ignition deploy ./ignition/modules/Vault.ts --network baseSepolia --verify",
-    "deploy:mainnet": "npx hardhat ignition deploy ./ignition/modules/Vault.ts --network sepolia --verify"
+    "deploy:mainnet": "npx hardhat ignition deploy ./ignition/modules/Vault.ts --network sepolia --verify",
+    "account:create": "npx ts-node scripts/createAccount.ts",
+    "account:get:sepolia": "npx ts-node scripts/getAccount.ts",
+    "account:get:mainnet": "npx ts-node scripts/getAccount.ts base-mainnet"
   },
   "devDependencies": {
     "@types/node": "^22.15.2",
