feat: Add Vault for signatures from smart wallets. Update deployment script.

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "start": "npx hardhat node",
     "compile": "npx hardhat compile",
     "deploy:local": "npx hardhat ignition deploy ./ignition/modules/Vault.ts --network localhost --reset",
-    "deploy:sepolia": "npx hardhat ignition deploy ./ignition/modules/Vault.ts --network baseSepolia",
-    "deploy:mainnet": "npx hardhat ignition deploy ./ignition/modules/Vault.ts --network sepolia",
+    "deploy:sepolia": "npx hardhat ignition deploy ./ignition/modules/Vault.ts --network baseSepolia --reset",
+    "deploy:mainnet": "npx hardhat ignition deploy ./ignition/modules/Vault.ts --network base --reset",
     "account:create": "npx ts-node scripts/createAccount.ts",
     "account:get:sepolia": "npx ts-node scripts/getAccount.ts",
     "account:get:mainnet": "npx ts-node scripts/getAccount.ts base-mainnet"
